06-K8s/25-Nov/cm-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cm-pod
spec:
  containers:
  - name: nginx-container
    image: nginx
    volumeMounts:
    - name: test-vol
      mountPath: "/myapp"
      readOnly: true
  volumes:
    - name: test-vol
      configMap:
        name: cm-1
        items:
        - key: stag_web.xml
          path: web.xml
