06-K8s/25-Nov/sec-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sec-pod
  labels:
    app.kubernetes.io/name: myapp
spec:
  containers:
  - name: myapp
    image: nginx
